ingress/go-app-ingress.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-go-app
  namespace: go-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx" # https://kubernetes.github.io/ingress-nginx/user-guide/multiple-ingress/
  tls:
  - hosts:
    - fox.beta-82.win
    secretName: fox-cert # todo remove new name alphabet-certs-ecdsa
  rules:
    - host: fox.beta-82.win
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: go-app
                port:
                  number: 8082
            path: /
