ingress/nginx-go-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: go-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fox.beta-82.win
    secretName: fox-tls
  rules:
    - host: fox.beta-82.win
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: go-app
                port:
                  number: 80
            path: /
