ingress/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - delta.beta-82.win
    - fox.beta-82.win
    secretName: delta-tls-2
  - hosts:
    - beta.beta-82.win
    secretName: beta-tls-2
  rules:
    - host: alfa.beta-82.win
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: service-nginx
                port:
                  number: 80
            path: /
    - host: delta.beta-82.win
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: service-python
                port:
                  number: 8080
            path: /
    - host: fox.beta-82.win
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: service-python
                port:
                  number: 8080
            path: /
    - host: grafana.beta-82.win
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grafana-proxy
                port:
                  number: 80
            path: /
