ingress/nginx-vault.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vault.beta-82.win
    secretName: vault-tls
  rules:
    - host: vault.beta-82.win
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
            path: /
