ingress/vault-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vault
  namespace: vault
  annotations:
    spec.ingressClassName: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - vault.beta-82.win
    secretName: vault-tls
  rules:
    - host: vault.beta-82.win
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
            path: /
